--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express-session": "^1.17.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-fetch": "^2.6.0",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
