--- a/config/config.json
+++ b/config/config.json
@@ -1,26 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": "qbaba131313!!",
+    "username": "kirca",
+    "password": "justin12",
     "database": "MyType",
-    "host": "127.0.0.1",
+    "host": "my-type-db.cp6g2u1aqbvj.us-east-2.rds.amazonaws.com",
     "dialect": "mysql",
-    "operatorsAliases": false
-  },
-  "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
-  },
-  "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "operatorsAliases": false,
+    "port": "13306"
   }
 }
