스프린트2 서버 완성

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
     "username": "root",
-    "password": "qbaba131313!!",
+    "password": "justin12",
     "database": "MyType",
-    "host": "localhost",
+    "host": "my-type-db.cp6g2u1aqbvj.us-east-2.rds.amazonaws.com",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "operatorsAliases": false,
+    "port": 13306
   }
 }
